--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/Header/Header.astro";
 import "../styles/index.css";
 ---
 
@@ -14,9 +15,12 @@ import "../styles/index.css";
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
       <!-- Google Fonts end -->
+      <!-- Bootstrap icon -->
+      <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+      <!-- Bootstrap icon end -->
       <title>Dre</title>
    </head>
    <body>
-    
+    <Header/>
    </body>
 </html>
