--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -8,10 +8,10 @@ import fem from '../../assets/images/icon-frontend-mentor.svg';
         <p class="text-4 xl:text-3 font-bold text-white">andreCurry</p>
         <div class="icons">
            <a href="">
-            <i class="bi bi-github text-white text-xl md:text-2xl hover:text-teal"></i>
+            <i class="bi bi-github text-white w-5 md:w-7 hover:text-teal"></i>
            </a>
            <a href="" class="fem-icon ">
-            <img src={fem} alt="">
+            <img src={fem.src} alt="icon">
            </a>
         </div>
     </nav>
