hero mark up added,misc changes to index files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header/Header.astro";
+import Hero from "../components/Hero/Hero.astro";
 import "../styles/index.css";
 ---
 
@@ -22,5 +23,8 @@ import "../styles/index.css";
    </head>
    <body>
     <Header/>
+    <Hero/>
    </body>
 </html>
+
+<!-- Todo: Underline component -->
