--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
    html {
-      font-size: 62.5%;
+      /* font-size: 62.5%; */
    }
 
    h2{
@@ -15,6 +15,16 @@
 
    body{
       @apply font-grotesk bg-black
+   }
+
+   header{
+      nav{
+         @apply md:flex justify-between items-center
+      }
+
+      .social-icons{
+         @apply flex justify-center gap-x-3
+      }
    }
 }
 
@@ -43,3 +53,4 @@
       width: calc(100% - 58px);
    }
 }
+
