add react component, change markup on header, hero

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -1,14 +1,24 @@
 ---
+import circle from '@assets/pattern-circle.svg';
+import rings from '@assets/pattern-rings.svg'
 ---
 
-<section id="hero" class="hero">
-   <div class="section-container">
-    <div>
-        <!-- for img -->
+<section id="hero" class="mt-80 md:mt-[62px] pb-24 ">
+  <div class="section-container">
+    <div class="hero-layout">
+      
+      <div class="text-center md:text-left text-white md:w-[443px]">
+        <h1
+          class="text-[40px] md:text-7xl xl:text-5 leading-none md:leading-[72px] md:tracking-[-2.045px] font-bold mb-6 md:mb-16 lg:mb-11"
+        >
+          Nice to meet you! I'm <span class="hero-name border-teal border-b-8 ">Andre</span>.
+        </h1>
+        <p class="text-base md:text-1 mb-6 md:mb-8 lg:mb-16">
+          Based in the UK, I'm a front-end developer passionate about building
+          accessible web apps that users love.
+        </p>
+        <a href="#contactme" class="tealUnderline">Contact Me</a>
+      </div>
     </div>
-    <div class="text-center text-white">
-        <h1 class="text-[40px] md:text-7xl xl:text-5 leading-none font-bold mb-6"> Nice to meet you! I'm Adam Keyes.</h1>
-        <p class="text-base"> Based in the UK, I'm a front-end developer passionate about building accessible web apps that users love.</p>
-    </div>
-   </div>
+  </div>
 </section>
