--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,27 +4,36 @@ import Hero from "../components/Hero/Hero.astro";
 import "../styles/index.css";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width" />
-      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-      <meta name="generator" content={Astro.generator} />
-      <!-- Google Fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
-      <!-- Google Fonts end -->
-      <!-- Bootstrap icon -->
-      <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-      <!-- Bootstrap icon end -->
-      <title>Dre</title>
-   </head>
-   <body>
-    <Header/>
-    <Hero/>
-   </body>
+<!doctype html>
+<html lang="en" class="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts end -->
+    <!-- Bootstrap icon -->
+    <link
+      rel="stylesheet"
+      href="/node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <!-- Bootstrap icon end -->
+    <title>Dre</title>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <Hero />
+    </main>
+    
+  </body>
 </html>
 
 <!-- Todo: Underline component -->
