add tablet,desktop img as background image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Header from "../components/Header/Header.astro";
-import Hero from "../components/Hero/Hero.astro";
+import Header from "@components/Header/Header.astro";
+import Hero from "@components/Hero/Hero.astro";
 import "../styles/index.css";
 ---
 
@@ -27,7 +27,7 @@ import "../styles/index.css";
     <!-- Bootstrap icon end -->
     <title>Dre</title>
   </head>
-  <body>
+  <body class="bg-no-repeat md:bg-tablet md:bg-[length:322px_600px] md:bg-[right_top_0px]">
     <Header />
     <main>
       <Hero />
