style changes for text and bg image

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -8,7 +8,7 @@ import {Image} from 'astro:assets';
 
 <header class="pt-5 ">
   <div class="section-container">
-    <div class="">
+    <div class="relative">
       <nav class="text-center">
         <p class="text-2 md:text-3 mb-5 md:mb-0 font-bold text-white">andreCurry</p>
         <div class="social-icons">
