--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -7,13 +7,13 @@ import rings from '@assets/pattern-rings.svg'
   <div class="section-container">
     <div class="hero-layout">
       
-      <div class="text-center md:text-left text-white md:w-[443px]">
+      <div class="text-center md:text-left text-white ">
         <h1
-          class="text-[40px] md:text-7xl xl:text-5 leading-none md:leading-[72px] md:tracking-[-2.045px] font-bold mb-6 md:mb-16 lg:mb-11"
+          class="text-[40px] md:text-7xl xl:text-5 leading-none md:leading-[72px] md:tracking-[-2.045px] font-bold mb-6 md:mb-16 lg:mb-11 md:w-[443px] lg:w-[706px]"
         >
-          Nice to meet you! I'm <span class="hero-name border-teal border-b-8 ">Andre</span>.
+          Nice to <br class="hidden md:block lg:hidden"> meet you! I'm<br class="hidden md:block lg:hidden"> <span class="hero-name border-teal border-b-8 ">Andre Curry</span>.
         </h1>
-        <p class="text-base md:text-1 mb-6 md:mb-8 lg:mb-16">
+        <p class="text-base md:text-1 mb-6 md:mb-8 lg:mb-16 md:w-[443px]">
           Based in the UK, I'm a front-end developer passionate about building
           accessible web apps that users love.
         </p>
