fix bg image desktop position

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import "../styles/index.css";
     <!-- Bootstrap icon end -->
     <title>Dre</title>
   </head>
-  <body class="bg-no-repeat md:bg-tablet md:bg-[length:322px_600px] md:bg-[right_top_0px]">
+  <body class="bg-no-repeat md:bg-tablet md:bg-[length:322px_600px] md:bg-[right_top_0px] lg:bg-desktop lg:bg-[length:445px_720px] lg:bg-[right_170px_top_0px]">
     <Header />
     <main>
       <Hero />
